yoshimi 1.3.x


2015-3-29 Will
- Fixed root dir length bug
- Fixed add root no-show bug
- Fixed remove root still showing bug
- Removed root path tab from Setup window as it
  was getting too complicated syncing 2 copies

2015-3-28 Will
- Reports can be sent to the console window or stderr under
  runtime selection in the settings window
  This setting is saved, per instance
- Lots of small log message rationalisations
- Removed some old commented out code
- Reinstated search for ZynAddSubFX config search if no
  Yoshimi one can be found

2015-3-26 Will
- Bugfixes in setup CC selections
- Removed auto close checkbox from Banks and instruments
- Reports menu item greyed out if not enabled.

2015-3-25 Will
- MIDI volume control range now saved to parameters
  per part as "volume_range"
- Updated XML headers to include author and
  yoshimi-major and yoshimi-minor version numbers
- All pan centre buttons now red, not just main one

2015-3-22 Will
- Rationalised MIDI volume control
- Implemented MIDI volume control range setting
- Implemented missing resets in 'Reset All Controllers'

2015-3-18 Will
- Pulled remaining program change gui calls into gui thread
- Root path window now correctly tracks 'save' changes

2015-3-15 Will
- Used new gui updating so that MIDI volume and pan changes
  are shown in both the main and panel windows

2015-3-15 Andrew
- Added asynchronous gui update ability from arbitrary threads

2015-3-12 Will
- inserted missing ";" at line 60 of yoshimi.ttl
  found by Holger Marzen

2015-3-10 Will
- Panel window bugfix

yoshimi 1.3.3

2015-3-2 Will
- Added patch from Jakub Cajka to furthur nail asString ambiguities
- Added SVG icon image (renamed alternative)
- Set up for release

2015-2-27 Will
- Added and updated Docs & Images
- Prepared for full release

2015-2-27 Andrew
- Updated splash screen

2015-2-19 Will
- Small gui code optimisations
- Removed some confusing, duplicate, redundant & disabled code

2015-2-18 Will
- Implemented bank rename