@@ -52,8 +52,8 @@ class ConfigUI {open : {private MiscFuncs}
   } {
     Fl_Window configwindow {
       label {Yoshimi Settings}
-      callback {o->hide();} open
-      xywh {273 160 465 330} type Double hide
+      callback {o->hide();} open selected
+      xywh {273 160 465 330} type Double visible
     } {
       Fl_Tabs {} {open
         xywh {5 5 455 297}
@@ -217,7 +217,7 @@ else
         }
         Fl_Group {} {
           label {Presets dirs} open
-          xywh {5 25 455 272} labelsize 12
+          xywh {5 25 455 272} labelsize 12 hide
         } {
           Fl_Browser presetbrowse {
             callback {activatebutton_presetdir(o->value() != 0);}
@@ -418,7 +418,7 @@ else
         BankRoot->value(BankRootvalue);
         BankRoot->activate();
     }} open
-          tooltip {MIDI CC preferences} xywh {5 25 455 275} labelsize 12 hide
+          tooltip {MIDI CC preferences} xywh {5 25 455 275} labelsize 12
           code0 {EPCvalue = synth->getRuntime().midi_upper_voice_C;}
           code1 {BankRootvalue = synth->getRuntime().midi_bank_root;}
         } {
@@ -613,7 +613,7 @@ configwindow->do_callback();}
         callback {savesettings();
 synth->getGuiMaster()->bankui->readbankcfg();
 configChanged = false;
-configwindow->do_callback();} selected
+configwindow->do_callback();}
         xywh {225 305 105 20} box THIN_UP_BOX labelsize 12
       }
     }
