@@ -245,13 +245,8 @@ mainCreateNewInstance(forceId);}
           }
           MenuItem {} {
             label {&Settings...}
-            callback {configui->Show();}
+            callback {configui->Show();} selected
             tooltip {View, change, save settings} xywh {25 25 100 20} labelsize 12
-          }
-          MenuItem Reports {
-            label {&Reports}
-            callback {yoshiLog->Show();}
-            tooltip {Show message log} xywh {15 15 100 20} labelsize 12
           }
           MenuItem {} {
             label {E&xit}
@@ -334,37 +329,6 @@ mainCreateNewInstance(forceId);}
             label {&Virtual Keyboard...}
             callback {virkeyboard->Show();}
             xywh {15 15 100 20} labelsize 12
-          }
-        }
-        Submenu {} {
-          label State open
-          xywh {0 0 70 21} labelsize 12
-        } {
-          MenuItem saveState {
-            label Save
-            callback {// for Alessandro
-
-                char *fle = fl_file_chooser("Save:", "({*.state})",
-                                            laststatefile.c_str(), 0);
-                if (fle)
-                {
-                    laststatefile = string(fle);
-                    synth->getRuntime().saveState(laststatefile);
-                }}
-            tooltip {Save session state} xywh {10 10 34 21} labelsize 12
-          }
-          MenuItem loadState {
-            label Load
-            callback {// for Alessandro
-                char *fle = fl_file_chooser("Load:", "({*.state})",
-                                            laststatefile.c_str(), 0);
-                if (fle)
-                {
-                    laststatefile = string(fle);
-                    synth->getRuntime().loadState(laststatefile);
-                }
-                partui->instrumentlabel->copy_label(partui->part->Pname.c_str());}
-            tooltip {Load session state} xywh {0 0 34 21} labelsize 12
           }
         }
         Submenu Parameters {
@@ -458,6 +422,37 @@ mainCreateNewInstance(forceId);}
             xywh {0 0 100 20} labelsize 12
           }
         }
+        Submenu {} {
+          label State open
+          xywh {0 0 70 21} labelsize 12
+        } {
+          MenuItem saveState {
+            label Save
+            callback {// for Alessandro
+
+                char *fle = fl_file_chooser("Save:", "({*.state})",
+                                            laststatefile.c_str(), 0);
+                if (fle)
+                {
+                    laststatefile = string(fle);
+                    synth->getRuntime().saveState(laststatefile);
+                }}
+            tooltip {Save session state} xywh {10 10 34 21} labelsize 12
+          }
+          MenuItem loadState {
+            label Load
+            callback {// for Alessandro
+                char *fle = fl_file_chooser("Load:", "({*.state})",
+                                            laststatefile.c_str(), 0);
+                if (fle)
+                {
+                    laststatefile = string(fle);
+                    synth->getRuntime().loadState(laststatefile);
+                }
+                partui->instrumentlabel->copy_label(partui->part->Pname.c_str());}
+            tooltip {Load session state} xywh {0 0 34 21} labelsize 12
+          }
+        }
       }
       Fl_Group MasterControls {
         label {Master  } open
@@ -538,7 +533,7 @@ mainCreateNewInstance(forceId);}
       } {
         Fl_Group SystemEffectsGrp {
           label {System Effects} open
-          xywh {3 116 380 40} color 221 selection_color 31 labelfont 1 labelsize 12 align 4
+          xywh {3 116 380 40} color 221 selection_color 31 labelfont 1 labelsize 12 align 4 hide
         } {
           Fl_Spinner syseffnocounter {
             label Effect
@@ -619,7 +614,7 @@ mainCreateNewInstance(forceId);}
         }
         Fl_Group InsertionEffectsGrp {
           label {Insertion Effects} open
-          xywh {3 116 380 40} color 221 selection_color 31 labelfont 1 labelsize 12 labelcolor 33 align 4 hide
+          xywh {3 116 380 40} color 221 selection_color 31 labelfont 1 labelsize 12 labelcolor 33 align 4
         } {
           Fl_Spinner inseffnocounter {
             label Effect
@@ -735,6 +730,11 @@ mainCreateNewInstance(forceId);}
           }
         }
       }
+      Fl_Button Reports {
+        label Reports
+        callback {yoshiLog->Show();}
+        xywh {289 90 60 24} box PLASTIC_UP_BOX labelsize 11
+      }
       Fl_Group syseffectuigroup {open
         xywh {3 158 384 95} box FLAT_BOX color 48 labeltype NO_LABEL
         code0 {o->show();}
@@ -767,7 +767,7 @@ mainCreateNewInstance(forceId);}
         } {}
       }
       Fl_Group {} {open
-        xywh {3 427 380 34} box DOWN_BOX labelsize 12
+        xywh {3 427 380 36} box DOWN_BOX labelsize 12
       } {
         Fl_Box vumeter {
           label {VU-Meter}
@@ -1163,8 +1163,7 @@ panellistitem[npart]->refresh();} {}
   }
   Function {updateBankRootDirs()} {open
   } {
-    code {bankui->readbankcfg();} {selected
-    }
+    code {bankui->readbankcfg();} {}
   }
   Function {getSynth()} {open return_type {SynthEngine *}
   } {
