@@ -7,6 +7,8 @@ yoshimi 1.3.x
 - Fixed remove root still showing bug
 - Removed root path tab from Setup window as it
   was getting too complicated syncing 2 copies
+- Changed 'Reports' menu item into a separate button
+  fltk problem :(
 
 2015-3-28 Will
 - Reports can be sent to the console window or stderr under
